--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 *.pth
 .DS_Store
 *.mdb
-/__pycache__
 *.jpg
 *.h5
 *.png
@@ -12,7 +11,8 @@
 *.txt
 
 # folder
-
+/self_write/
+/__pycache__/
 
 !PaperImage/*.png
 !figure/*.png
